--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         <h1>Welcome to Tourist.com</h1>
     </header>
     <div class="container">
-        <p>This is the home page. Explore various attractions!</p>
+        <p>Curious about China? Choose a city and explore various attractions!</p>
         <div class="attraction-links">
             <div class="attraction-link">
                 <a href="{{ url_for('attraction', attraction_id='bj') }}">
