--- a/templates/home.html
+++ b/templates/home.html
@@ -1,42 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourist Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+{% block title %}Home{% endblock %}
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-            </ul>
-        </nav>
-        <h1>Welcome to Tourist.com</h1>
-    </header>
-    <div class="container">
-        <p>Curious about China? Choose a city and explore various attractions!</p>
-        <div class="attraction-links">
-            <div class="attraction-link">
-                <a href="{{ url_for('attraction', attraction_id='bj') }}">
-                    <img src="{{ url_for('static', filename='images/bj1.jpg') }}" alt="Beijing">
-                    <h2>Beijing</h2>
-                </a>
-            </div>
-            <div class="attraction-link">
-                <a href="{{ url_for('attraction', attraction_id='sh') }}">
-                    <img src="{{ url_for('static', filename='images/sh1.jpg') }}" alt="Shanghai">
-                    <h2>Shanghai</h2>
-                </a>
-            </div>
+{% block header %}Welcome to Tourist.com{% endblock %}
+
+{% block content %}
+<div class="container">
+    <p>Curious about China? Choose a city and explore various attractions!</p>
+    <div class="attraction-links">
+        <div class="attraction-link">
+            <a href="{{ url_for('attraction', attraction_id='bj') }}">
+                <img src="{{ url_for('static', filename='images/bj1.jpg') }}" alt="Beijing">
+                <h2>Beijing</h2>
+            </a>
+        </div>
+        <div class="attraction-link">
+            <a href="{{ url_for('attraction', attraction_id='sh') }}">
+                <img src="{{ url_for('static', filename='images/sh1.jpg') }}" alt="Shanghai">
+                <h2>Shanghai</h2>
+            </a>
         </div>
     </div>
-    <footer>
-        <p>&copy; 2025 Tourist</p>
-    </footer>
-</body>
-
-</html>
+</div>
+{% endblock %}
