--- a/templates/home.html
+++ b/templates/home.html
@@ -9,13 +9,13 @@
     <p>Curious about China? Choose a city and explore various attractions!</p>
     <div class="attraction-links">
         <div class="attraction-link">
-            <a href="{{ url_for('attraction', attraction_id='bj') }}">
+            <a href="{{ url_for('city', city_id='bj') }}">
                 <img src="{{ url_for('static', filename='images/bj1.jpg') }}" alt="Beijing">
                 <h2>Beijing</h2>
             </a>
         </div>
         <div class="attraction-link">
-            <a href="{{ url_for('attraction', attraction_id='sh') }}">
+            <a href="{{ url_for('city', city_id='sh') }}">
                 <img src="{{ url_for('static', filename='images/sh1.jpg') }}" alt="Shanghai">
                 <h2>Shanghai</h2>
             </a>
