--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tourist{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB93KZV770"></script>
     <script>
@@ -15,6 +16,7 @@
 
         gtag('config', 'G-XB93KZV770');
     </script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 
 <body>
@@ -28,6 +30,7 @@
     </header>
     <div class="container">
         {% block content %}{% endblock %}
+        <div id="map" style="height: 400px;"></div>
     </div>
     <footer>
         <p>&copy; 2025 Tourist</p>
